--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <base href="/">
   <meta name="robots" content="index,follow">
-  <link rel="canonical" href="https://axis-development.github.io/ettZ-app/"/>
-  <link rel="shortcut icon" type="image/x-icon" href="ettZ-app/img/logo-crea.png" />
+  <link rel="canonical" href="https://axis-development.github.io/"/>
+  <link rel="shortcut icon" type="image/x-icon" href="img/logo-crea.png" />
   <title>Jardinier & Paysagiste Ottignies et alentours | ETT.ZConstruct</title>
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://www.ETT.ZConstruct.be">
@@ -22,7 +22,7 @@
   <meta property="og:image:type" content="image/png"/>
   <meta property="og:image:width" content="2078">
   <meta property="og:image:height" content="971">
-  <meta property="twitter:image" content="//ettZ-app/img/">
+  <meta property="twitter:image" content="//img/">
   <meta property="twitter:image:alt" content="">
 
   <link  href="ettZ/img/img_2423-min.png" as="image" media="(max-width: 992px)"><link  href="ettZ/img/img_2423-min.png" as="image" media="(max-width: 1199px)"><link  href="ettZ/img/img_2423-min.png" as="image" media="(min-width: 1200px)">
@@ -33,8 +33,8 @@
   <link rel="stylesheet" href="https://assets.sbcdnsb.com/assets/tool/visitor/elements/manifests/content_box-5f80c809.css" media="all" />
   <link rel="stylesheet" href="https://assets.sbcdnsb.com/assets/themes/desktop/8/css/visitor-8affef90.css" media="all" />
   <link rel="stylesheet" href="https://assets.sbcdnsb.com/assets/themes/mobile/6/css/visitor-c251b678.css" media="only screen and (max-width: 992px)" />
-  <link rel="stylesheet" media="all" href="ettZ-app/site/Q4xOA1XxrQz5eq9QZuOFuA/styles/1743014306/dynamic-styles.css">
-  <link rel="stylesheet" media="all" href="ettZ-app/styles/pages/1553979/1744898768/containers-specific-styles.css">
+  <link rel="stylesheet" media="all" href="site/Q4xOA1XxrQz5eq9QZuOFuA/styles/1743014306/dynamic-styles.css">
+  <link rel="stylesheet" media="all" href="styles/pages/1553979/1744898768/containers-specific-styles.css">
   <meta name="csrf-param" content="authenticity_token" />
   <meta name="csrf-token" content="ElJBEhzsMcldVos_RErHxM9ud6sEfFO_voJ0Ft65F7PKd0IX3I9WB3YD-oHBF8Pz1uLsqVOg0YEJAYEYOW9Rkw" />
   <script>
@@ -63,7 +63,7 @@
     {"@context":"https://schema.org","@type":"WebSite","name":"ETT.ZConstruct","url":"http://www.ETT.ZConstruct.be"}
   </script>
   <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"LocalBusiness","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","name":"ETT.ZConstruct","legalName":"ETT.ZConstruct","url":"http://www.ETT.ZConstruct.be","sameAs":["https://www.instagram.com/ETT.ZConstruction_/?hl=fr","https://maps.app.goo.gl/LP7yxanyhAoJ2vMAA"],"address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":"Ottignies","postalCode":"1204","streetAddress":"Rue du Stand 40"},"telephone":"+32472211610","image":"ettZ-app/img/logo-ettzconstruction.png","logo":{"@type":"ImageObject","url":"ettZ-app/img/logo-ettzconstruction.png","inLanguage":"fr-FR","datePublished":"2024-10-17","contentSize":40384,"width":"600","height":"137"}}
+    {"@context":"https://schema.org","@type":"LocalBusiness","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","name":"ETT.ZConstruct","legalName":"ETT.ZConstruct","url":"http://www.ETT.ZConstruct.be","sameAs":["https://www.instagram.com/ETT.ZConstruction_/?hl=fr","https://maps.app.goo.gl/LP7yxanyhAoJ2vMAA"],"address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":"Ottignies","postalCode":"1204","streetAddress":"Rue du Stand 40"},"telephone":"+32472211610","image":"img/logo-ettzconstruction.png","logo":{"@type":"ImageObject","url":"img/logo-ettzconstruction.png","inLanguage":"fr-FR","datePublished":"2024-10-17","contentSize":40384,"width":"600","height":"137"}}
   </script>
 </head>
 <body class="view-visitor theme_wide menu_fixed has_header1 has_header2 has_header2_simple has_no_aside has_footer default_page adapt_header2_height_to_window_on_desktop lazyload ">
@@ -189,7 +189,7 @@
       <div class="header-mobile-logo">
         <a><div class="element element-business-logo">
           <img title="Logo ETT.ZConstruct" alt="Logo ETT.ZConstruct" style="max-width: 100%;" height="137" width="600"
-               src="ettZ-app/img/logo-ettzconstruction.png" /></div></a>
+               src="img/logo-ettzconstruction.png" /></div></a>
       </div>
     </header>
 
@@ -199,7 +199,7 @@
         <li class="menu-tab-container sb-col   ">
           <div class="menu-tab">
 
-            <a class="menu-tab-element link-text link-text-dark  content-link" href="/ettZ-app/index.html">
+            <a class="menu-tab-element link-text link-text-dark  content-link" href="/index.html">
             <span class='link-label inline-flex items-center  main-menu icon-position-left' style=''>
 
               <span class="">Accueil</span>
@@ -223,7 +223,7 @@
               <li class="menu-tab-container sb-col   ">
                 <div class="menu-tab">
 
-                  <a class="menu-tab-element link-text link-text-dark  content-link" href="//ettZ-app/piscines.html">
+                  <a class="menu-tab-element link-text link-text-dark  content-link" href="//piscines.html">
             <span class='link-label inline-flex items-center  main-menu icon-position-left' style=''>
 
               <span class="">Piscines</span>
@@ -308,7 +308,7 @@
     </div></div></div><div class="container-light" id="header1"><div id="header1-static" class="">
       <div class="header1-static-logo">
         <div id="container_55625383" class=" sb-bloc sb-bloc-level-3 header1-logo bloc-element-business-logo  "
-             style="padding: 10px 0px 10px 0px;"><div id="container_55625383_inner" style="" class="sb-bloc-inner container_55625383_inner"><div class="element element-business-logo"><a href="/"><img style="max-width: 100%;" height="137" width="600" src="ettZ-app/img/logo-ettzconstruction.png" /></a></div></div></div>
+             style="padding: 10px 0px 10px 0px;"><div id="container_55625383_inner" style="" class="sb-bloc-inner container_55625383_inner"><div class="element element-business-logo"><a href="/"><img style="max-width: 100%;" height="137" width="600" src="img/logo-ettzconstruction.png" /></a></div></div></div>
       </div>
 </div></div></div></div><div class="container-light" id="header2"><div id="container_55625462" class=" sb-bloc sb-bloc-level-3 resizable-y bloc-element-absolute-container mobile-adapt-height-to-content  " style="height: 840px;"><div id="container_55625462_inner" style="" class="sb-bloc-inner container_55625462_inner  container-dark bg-imaged"><div class="svg-filter" style=""></div><div class="element element-absolute-container"><div class="tree-container"><div id="container_55635359" class="sb-bloc-alignment-wrapper  sb-bloc-alignment-h-v sb-bloc-alignment-h-left sb-bloc-alignment-v-bottom  "><div class="sb-bloc-alignment-sibling"></div><div class=" sb-bloc sb-bloc-level-3 sb-bloc-position-absolute bloc-element-static-container" style="width: 92.4%;top: 5.0%;left: 5.0%;"><div id="container_55635359_inner" style="padding: 10px 10px 10px 10px;" class="sb-bloc-inner container_55635359_inner"><div class="element element-static-container"><div class="tree-container clearfix"></div></div></div></div></div><div id="container_55635361" class="sb-bloc-alignment-wrapper  sb-bloc-alignment-h-v sb-bloc-alignment-h-center sb-bloc-alignment-v-middle  "><div class="sb-bloc-alignment-sibling"></div><div class=" sb-bloc sb-bloc-level-3 sb-bloc-position-absolute bloc-element-static-container" style="width: 99.9%;top: 5.0%;left: 5.0%;"><div id="container_55635361_inner" style="" class="sb-bloc-inner container_55635361_inner"><div class="element element-static-container"><div class="tree-container clearfix"><div id="container_55635368" class=" sb-bloc sb-bloc-level-3 bloc-element-columns-container  " style="padding: 10px 10px 10px 10px;"><div id="container_55635368_inner" style="border-top-right-radius: 10px;border-top-left-radius: 10px;border-bottom-right-radius: 10px;border-bottom-left-radius: 10px;box-shadow: 5px 15px 40px rgba(47,47,47,0.2);" class="sb-bloc-inner container_55635368_inner border-radius"><div class="element element-columns-container align-top tree-container"><div class=" sb-bloc sb-bloc-level-1"><div class="sb-row sb-row-custom subcontainers media-query columns-gutter-size-20"><div class=" sb-bloc sb-bloc-level-2 sb-col sb-col-sm" style="width: 70.0%;"><div class="subcontainers"><div id="container_55635379" class=" sb-bloc sb-bloc-level-3 bloc-element-static-container bloc-eligible-for-height-equalization  " style=""><div id="container_55635379_inner" style="padding: 20px 20px 20px 20px;border-top-left-radius: 10px;border-bottom-left-radius: 10px;" class="sb-bloc-inner container_55635379_inner background-color-before-c-3 border-radius container-light"><div class="element element-static-container"><div class="tree-container clearfix"><div id="container_55635372" class=" sb-bloc sb-bloc-level-3 bloc-element-title  " style="padding: 10px 10px 20px 10px;"><div class="element element-title sb-vi-text-left"><h1 class=" forced-size size-30 color-c-2 forced-color"><span class="element-title-inner"><span style="font-family:Helvetica;">
     Devis gratuit d&#39;am&eacute;nagement ext&eacute;rieur et construction piscines</span></span></h1></div></div><div id="container_55635375" class=" sb-bloc sb-bloc-level-3 bloc-element-text  " style="padding: 10px 10px 10px 10px;"><div class="element element-text displayed_in_1_column" spellcheck="true"><p style="text-align: left;">N'hésitez pas à contacter <b>ETT.ZConstruct</b> pour tous travaux<b> d'aménagement extérieur</b> Nous vous répondrons dans les plus brefs délais !</p></div></div><div id="container_55635378" class=" sb-bloc sb-bloc-level-3 bloc-element-form-standard  " style="padding: 10px 10px 10px 10px;"><div id="element-form-standard-214479" class="element element-form-standard sb-vi-text-center element-form" data-id="214479" data-loading-text="Envoi...">
@@ -444,7 +444,7 @@
     </div>
 
 <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"LocalBusiness","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","name":"ETTZConstruct","address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":"Limelette","postalCode":"1342","streetAddress":"Avenue des Eglantines 27 Box 1"},"telephone":"+32472211610","image":"ettZ-app/img/logo-crea.png"}
+  {"@context":"https://schema.org","@type":"LocalBusiness","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","name":"ETTZConstruct","address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":"Limelette","postalCode":"1342","streetAddress":"Avenue des Eglantines 27 Box 1"},"telephone":"+32472211610","image":"img/logo-crea.png"}
 </script></div></div></div><div id="container_55635392" class=" sb-bloc sb-bloc-level-3 resizable-y bloc-element-map-standard  " style="height: 320px;"><div id="container_55635392_inner" style="margin: 10px 10px 10px 10px;" class="sb-bloc-inner container_55635392_inner"><div class="element element-map-standard">
     <iframe
       class="map-container" style="border: none; width: 100%; height: 100%;"
@@ -453,7 +453,7 @@
 
 
     <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"LocalBusiness","name":"ETTZConstruct","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":"Limelette","postalCode":"1342","streetAddress":"Avenue des Eglantines 27 Box 1"},"telephone":"+32472211610","image":"ettZ-app/img/logo-crea.png","geo":{"@type":"https://schema.org/GeoCoordinates","latitude":" 50.6759167","longitude":"4.5607604"}}
+  {"@context":"https://schema.org","@type":"LocalBusiness","name":"ETTZConstruct","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":"Limelette","postalCode":"1342","streetAddress":"Avenue des Eglantines 27 Box 1"},"telephone":"+32472211610","image":"img/logo-crea.png","geo":{"@type":"https://schema.org/GeoCoordinates","latitude":" 50.6759167","longitude":"4.5607604"}}
 </script>
 </div></div></div><div id="container_57545702" class=" sb-bloc sb-bloc-level-3 bloc-element-social-links-group  " style="padding: 10px 10px 10px 10px;"><div class="element element-social-links-group social-links-group-sm sb-vi-text-left sb-vi-mobile-text-center"><div class="link-buttons-skin-square color-type-skin_1">
 
@@ -491,7 +491,7 @@
     <li class="menu-tab-container sb-col   ">
       <div class="menu-tab">
 
-          <a class="menu-tab-element link-text link-text-dark  content-link" href="//ettZ-app/index.html">
+          <a class="menu-tab-element link-text link-text-dark  content-link" href="//index.html">
             <span class='link-label inline-flex items-center  secondary-menu icon-position-left' style=''>
 
               <span class="">ETTZConstruct</span>
@@ -613,7 +613,7 @@
     </div>
 
 <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"LocalBusiness","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","name":"ETTZConstruct","address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":"Limelette","postalCode":"1342","streetAddress":"Avenue des Églantines 27, Boîte 1"},"telephone":"+32472211610","image":"/ettZ-app/img/logo-crea.png"}
+  {"@context":"https://schema.org","@type":"LocalBusiness","@id":"https://schema.org/LocalBusiness/EoNaEBVnaS","name":"ETTZConstruct","address":{"@type":"PostalAddress","@id":"https://schema.org/address/EoNaEBVnaS","addressLocality":"Limelette","postalCode":"1342","streetAddress":"Avenue des Églantines 27, Boîte 1"},"telephone":"+32472211610","image":"/img/logo-crea.png"}
 </script></div></div></div><div id="container_55625486" class=" sb-bloc sb-bloc-level-3 bloc-element-menu  " style="padding: 10px 10px 0px 10px;"><div class="element element-menu sb-vi-text-center sb-vi-mobile-text-center"><div class=" menu-horizontal menu-tabs-links"><div class="menu-level-container menu-level-0">
   <ul class="menu-tabs sb-row media-query">
     <li class="menu-tab-container sb-col   ">
